#268684 by Michelle: Switched to using styles.  (Theme changes: Numerous. Will have docs by next alpha.)
#268684 by Michelle: Backport: Cleaned up advf-forum-topic-list.tpl.php and moved some logic into the preprocess.
#268684 by Michelle: Backport: Added classes to table header for topic list and cleaned up empty fields.
#238668 by ixeft, Michelle: Backport: Added N new posts to forum overview. 

August 21, 2008
---------------
#295562 by catch: Make 'views' column in topic list statistics.module dependent.

August 19, 2008
--------------
#266003 by Michelle: Fixed issue with forum posts not showing as teasers inside of other nodes.
#268684 by Michelle, stephthegeek: Backported changes made to D6 last week.

August 9, 2008
--------------
#291597 by rallycivic: Put nid first in query to make db_rewrite_sql happy.
#276232 by Michelle. Fixed wrong variable in all of the user info code which made the whole user info side all wrong.
#207920 by Michelle: Better documented use of $profile variable. (Theme changes: advf-forum-user.tpl.php)
No issue by Michelle: Fixed anonymous commenters having user info showing.
#248815 by Michelle, Funkymoses: Changed CSS for avatar. (Theme changes: advanced_forum-structure.css)

August 2, 2008
--------------
#268273 by Michelle: Backported fix for last topic in forum from 6.x branch. (Theme changes: advf-forum-submitted.tpl.php, modified to match reduced options.)

June 10, 2008
-------------
#228557 by neclimdul: Added preprocessor code to emulate the preprocessor in Drupal 6 which allows other modules to add to advanced forum. This patch created a new "modules" directory which holds individual includes for each module adding to advforum.
#NONE by Michelle: Backported the refactored theme path related functions including adding a new setting for the icon directory.

June 9, 2008 -- ALPHA 10
------------
#267827 by Michelle: Ripped out the last week of work and am attempting to do this with a query again.